Updating application with readme

--- a/ImageHistogram/appsettings.json
+++ b/ImageHistogram/appsettings.json
@@ -8,7 +8,11 @@
   },
   "AllowedHosts": "*",
   "PictureDbOptions": {
-    "DirectoryPath": "C:\\Users\\karymes\\source\\repos\\ImageHistogram\\photos\\RoboCup 2018\\train\\images",
-    "ImageCount":  10
+    //"DirectoryPath": "C:\\Users\\karymes\\source\\repos\\ImageHistogram\\photos\\RoboCup 2018\\train\\images",
+    "DirectoryPath": "\\\\apicategorizer.file.core.windows.net\\image-histogram\\lab",
+    "ImageCount": 10
+  },
+  "HistogramOptions": {
+    "BinCount":  16
   }
 }
