--- a/ImageHistogram/appsettings.Development.json
+++ b/ImageHistogram/appsettings.Development.json
@@ -5,5 +5,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "PictureDbOptions": {
+    "DirectoryPath": "C:\\Users\\karymes\\source\\repos\\ImageHistogram\\photos\\train",
+    "ImageCount": 80
   }
 }
